@@ -214,8 +214,12 @@ namespace BOB
                 UIButton randomButton = AddIconButton(this, RandomButtonX, ToggleY, ToggleSize, "BOB_PNL_RST", UITextures.LoadQuadSpriteAtlas("BOB-Random"));
                 randomButton.eventClicked += (c, clickEvent) =>
                 {
-                    StandalonePanelManager<BOBRandomPanel>.Create();
-                    StandalonePanelManager<BOBRandomPanel>.Panel.SelectRandomPrefab(SelectedReplacementPrefab);
+                    // Check that templates were loaded first.
+                    if (PrefabLists.CheckRandomTemplates())
+                    {
+                        StandalonePanelManager<BOBRandomPanel>.Create();
+                        StandalonePanelManager<BOBRandomPanel>.Panel.SelectRandomPrefab(SelectedReplacementPrefab);
+                    }
                 };
 
                 // Set initial button states.
