@@ -120,6 +120,9 @@
 "ERR_HAR1","Possible causes of this problem include:"
 "ERR_HAR2","The required Harmony 2 mod dependency was not installed"
 "ERR_HAR3","An old and/or broken mod is preventing Harmony 2 from operating properly"
+"RANDOM_TEMPLATE_MISSING","BOB was unable to load one or more random template assets:"
+"PROP_TEMPLATE_MISSING","BOB random props will not work"
+"TREE_TEMPLATE_MISSING","BOB random trees will not work"
 "BOB_UPD_040_0","Introducing map tree replacement! Activate the BOB tool as usual and click on a free-standing tree."
 "BOB_UPD_041_0","Fix intermittent building replacement panel exception when changing target item."
 "BOB_UPD_042_0","Enable selection of sub-buildings"
