@@ -1,4 +1,5 @@
 ﻿- Fix map tree replacement resetting to prop mode after applying replacement
+- Add error notification when random prop or tree template can't be loadedS
 
 
 Version 0.9.7.2 -
